--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
   "name": "friend_finder",
   "version": "1.0.0",
-  "description": "compatability app",
+  "description": "Friend Finder is deployed on Heroku at [this link](https://whispering-caverns-34699.herokuapp.com/).",
   "main": "server.js",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {},
   "scripts": {
-    "test": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/chrishibby75/friend_finder.git"
   },
-  "author": "Chris Hibberd",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/chrishibby75/friend_finder/issues"
   },
-  "homepage": "https://github.com/chrishibby75/friend_finder#readme",
-  "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "path": "^0.12.7"
-  }
+  "homepage": "https://github.com/chrishibby75/friend_finder#readme"
 }
