--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "friend_finder",
   "version": "1.0.0",
-  "description": "Friend Finder is deployed on Heroku at [this link](https://whispering-caverns-34699.herokuapp.com/).",
+  "description": "Friend Finder is deployed on Heroku at [this link](https://friend-finder0706.herokuapp.com/).",
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.18.3",
